# dioxus-fs-demo

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  build.sh  diesel.toml  flake.nix  index.html  npm-deps-hash  package-lock.json  run.sh  update.sh  webpack.config.js
assets/js/: index.js
migrations/2024-12-21-215033_create_penguin_encounter/: down.sql  up.sql
nix/: module.nix
src/: main.rs  model.rs
src/server/: database.rs  handlers.rs  mod.rs  schema.rs
