[package]
name = "dioxus-fs"
version = "0.1.0"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "=0.6.0", features = ["router", "fullstack", "asset", "document", "file_engine", "hooks", "html", "launch", "logger", "macro", "mounted", "signals"], default-features = false }
static_file_util = "0.1.0"
lazy_static = "1.4"   # Required dependency for lazy static initialization
mime = "0.3"          # For handling MIME types
tokio = { version = "1.42.0", optional = true }
dioxus-cli-config = { version = "*", optional = true }
axum = { version = "0.7.9", optional = true }
#ws-tool = { version = "0.11.0", features = ["async"] }
#tungstenite = "0.26.1"
getrandom = { version = "0.2.15", features = ["js"] }
futures = "0.3.31"
gloo-net = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }

[build-dependencies]
static_file_util = "0.1.0"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dioxus-cli-config", "tokio", "axum", "tracing-subscriber"]
tracing-subscriber = ["dep:tracing-subscriber"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
